syntax = "proto3";

package metrics;

option go_package = "metrics/internal/grpchandler";

service MetricsService {
  rpc UpdateBatchMetricByJSON(UpdateBatchMetricByJSONRequest) returns (UpdateBatchMetricByJSONResponse);
  rpc Ping(PingRequest) returns (PingResponse);
}

message UpdateBatchMetricByJSONRequest {
  string Metrics = 1;
}

message UpdateBatchMetricByJSONResponse {}

message PingRequest {}

message PingResponse {}